Fix overflow

--- a/frontend/src/sass/landing-beta.sass
+++ b/frontend/src/sass/landing-beta.sass
@@ -471,9 +471,6 @@ main#landing
     .landing-summary-container
       .main-content, .side-content
         min-inline-size: 100%
-
-@media (max-width: 1000px)
-  main#landing
     .landing-header-container
       grid-template-columns: auto auto
       .landing-title
@@ -502,13 +499,13 @@ main#landing
       .visualisations-box
         grid-template-columns: 1fr
 
-@media (min-width: 500px) and  (max-width: 1000px)
+@media (min-width: 700px) and  (max-width: 1000px)
   main#landing
     .landing-header-container
       .landing-download
         grid-row: 1
 
-@media (max-width: 500px)
+@media (max-width: 700px)
   main#landing
     .landing-header-container
       .landing-title
